--- a/src/app/layout/config/app.config.component.html
+++ b/src/app/layout/config/app.config.component.html
@@ -3,6 +3,10 @@
 </button>
 
 <p-sidebar [(visible)]="visible" position="right" [transitionOptions]="'.3s cubic-bezier(0, 0, 0.2, 1)'" styleClass="layout-config-sidebar w-20rem">
+    <h5>Sakai ShowCase</h5>
+    <p-inputSwitch [(ngModel)]="showCase" [disabled]="true"></p-inputSwitch>
+
+
     <h5>Scale</h5>
     <div class="flex align-items-center">
         <button icon="pi pi-minus" type="button" pButton (click)="decrementScale()" class="p-button-text p-button-rounded w-2rem h-2rem mr-2" [disabled]="scale === scales[0]"></button>
