--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,55 @@
 <div class="grid">
     <div class="col-12">
         <div class="card">
-            <h4>Home Page</h4>
-            <p>Esta á a página inicial, do seu projeto base.</p>
+            <h1>DevFlow Web - Transforme-se em um Desenvolvedor</h1>
+            <h2>do Zero ao seu Primeiro Aplicativo Web Publicado</h2>
+            <p>O DevFlow Web é uma experiência prática e imersiva de ambiente corporativo simulado que antecipa-se ao mercado de trabalho acelerando a formação profissional de desenvolvedores de aplicativos web.</p>
+            <p>Durante 26 sprints, você participará de uma imersão dentro de uma ficção ao ser contratado por uma startup fictícia chamada Alolu Tech para o cargo de Estagiário de Desenvolvedor Java Full Stack. Sua missão será construir um aplicativo web para controle de finanças pessoais, utilizando metodologia, ferramentas, e práticas utilizadas em um ambiente de trabalho real.</p>
+            <button pButton pRipple label="Quero me inscrever" class="p-button-secondary"></button>
         </div>
     </div>
+
+    <div class="col-12" >
+        <div class="card">
+            <h1 class="text-center">5 diferenciais para começar com o DevFlow Web agora mesmo</h1>
+            <div class="grid">
+                <div class="col-12 md:col-6 lg:col-1 text-center">
+                </div>
+                <div class="col-12 md:col-6 lg:col-2 text-center">
+                    <i class="text-2xl pi pi-flag-fill"></i>
+                    <h3>Evolução desde a primeira sprint:</h3>
+                    <p>com a publicação da prova de conceito (POC) com a base do projeto logo na primeira Sprint, você poderá perceber os resultados e acompanhar a evolução do processo ao longo de cada sprints.</p>
+                </div>
+                <div class="col-12 md:col-6 lg:col-2 text-center">
+                    <i class="text-2xl pi pi-clock"></i>
+                    <h3>Sprints personalizadas por desempenho:</h3>
+                    <p>as sprints são adaptadas ao seu ritmo de aprendizado e progresso individual, permitindo que você evolua no seu próprio ritmo.</p>
+                </div>
+                <div class="col-12 md:col-6 lg:col-2 text-center">
+                    <i class="text-2xl pi pi-calendar"></i>
+                    <h3>Conclusão estimada em 6 meses a 1 ano:</h3>
+                    <p>o DevFlow Web é projetado para ajudá-lo a preparar-se para uma carreira de sucesso em um período razoável de tempo.</p>
+                </div>
+                <div class="col-12 md:col-6 lg:col-2 text-center">
+                    <i class="text-2xl pi pi-tags"></i>
+                    <h3>Pílulas de conhecimento inclusas</h3>
+                    <p>como parte desta experiência, oferecemos pílulas de conhecimento para complementar sua jornada de aprendizado sem nenhum custo adicional.</p>
+                </div>
+                <div class="col-12 md:col-6 lg:col-2 text-center">
+                    <i class="text-2xl pi pi-wrench"></i>
+                    <h3>Acesso a ferramentas corporativas:</h3>
+                    <p>ocê terá acesso a ferramentas essenciais como GitLab e PostgreSQL, utilizadas pelas empresas no desenvolvimento de aplicativos web, o que o preparará para trabalhar em um ambiente corporativo real.</p>
+                </div>
+                <div class="col-12 md:col-6 lg:col-1 text-center">
+                </div>
+            </div>
+            <div class="text-center">
+                <button pButton pRipple label="Quero me inscrever" class="p-button-secondary"></button>
+            </div>
+        </div>
+    </div>
+
+
 </div>
+
+
