--- a/src/assets/layout/styles/layout/_typography.scss
+++ b/src/assets/layout/styles/layout/_typography.scss
@@ -1,5 +1,5 @@
 h1, h2, h3, h4, h5, h6 {
-    margin: 1.5rem 0 1rem 0;
+    margin: 1rem 0 1rem 0;
     font-family: inherit;
     font-weight: 500;
     line-height: 1.2;
@@ -11,11 +11,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 2.5rem;
+    --font-size: 2.5rem;
+    color: #fff;
+    font-size: 33px;
+    font-weight: 700;
+    text-shadow: 2px 2px 2px #222222;
 }
 
 h2 {
-    font-size: 2rem;
+    --font-size: 2rem;
+    color: #bd93f9;
+    font-size: 31px;
+    font-weight: 700;
+    text-shadow: 2px 2px 2px #222222;
 }
 
 h3 {
@@ -56,6 +64,9 @@ hr {
 p {
     margin: 0 0 1rem 0;
     line-height: 1.5;
+
+    color: #fff;
+    font-size: 16px;
 
     &:last-child {
         margin-bottom: 0;
