Update homepage content and set environment to development
Updated the content of the home page to give more detailed information about the DevFlow program, making it more engaging and informative for potential users. Also set the environment production to false for testing purposes.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,51 +1,66 @@
 <div class="grid">
     <div class="col-12">
+        <h1 class="text-center">DevFlow - Transforme-se em um Desenvolvedor</h1>
         <div class="card">
-            <h1>DevFlow Web - Transforme-se em um Desenvolvedor</h1>
             <h2>do Zero ao seu Primeiro Aplicativo Web Publicado</h2>
-            <p>O DevFlow Web é uma experiência prática e imersiva de ambiente corporativo simulado que antecipa-se ao mercado de trabalho acelerando a formação profissional de desenvolvedores de aplicativos web.</p>
-            <p>Durante 26 sprints, você participará de uma imersão dentro de uma ficção ao ser contratado por uma startup fictícia chamada Alolu Tech para o cargo de Estagiário de Desenvolvedor Java Full Stack. Sua missão será construir um aplicativo web para controle de finanças pessoais, utilizando metodologia, ferramentas, e práticas utilizadas em um ambiente de trabalho real.</p>
-            <button pButton pRipple label="Quero me inscrever" class="p-button-secondary"></button>
+            <p>O DevFlow é uma experiência prática e imersiva como Desenvolvedor Java Fullstack onde sua missão é construir e publicar um aplicativo web completo.</p>
+            <p>Você inicia imediatamente como <b>DevFlower</b> (Dev em Experiência) e ao final é esperado que você esteja apto a se candidatar a uma primeira vaga de trabalho como Desenvolvedor Java Fullstack, com conhecimento e experiência em ambos os lados, backend e frontend.</p>
+            <p>A experiência DevFlow acontece em um ambiente corporativo simulado, utilizando metodologia ágil (Scrum) e ferramentas de mercado profissionais (GitHub Pro, InteliJ IDEA Ultimate, Webstorm, Datagrip, AWS, etc) permitindo a você antecipar-se ao mercado de trabalho com experiência profissional, acelerando a sua formação como desenvolvedor Java Full Stack de aplicativos web.</p>
+            <p>Sua missão está dividida em 12 sprints, cada uma com uma entrega incremental, até chegar no produto final pronto e publicado. Ao longo das Sprints, você conhecerá todo o ecossistema envolvido e as tecnologias necessárias para o desenvolvimento e publicação de um aplicativo web. A cada sprint, são liberadas diversas "Dev Pills" relacionadas, que são pilulas de conhecimentos opcionais que podem ser usadas para sua capacitação. É esperado que você conclua cada sprint entre 15 dias e 1 mês, permitindo assim que você complete a missão entre 6 meses e 1 ano.</p>
+            <p>Durante sua experiência como um <b>DevFlower</b>, você contará com uma mentoria (tech lead sênior com experiência de mercado) que te dará suporte e orientações para completar sua missão, além de dar um direcionamento personalizado para sua carreira profissional.</p>
+
+
+            <p>O DevFlow não é um curso ou um bootcamp, mas é uma missão, com mentoria, capacitação, ambiente e ferramentas reais de trabalho, com produto pronto no final, tudo para te preparar e impulsionar sua carreira como Desenvolvedor Web.</p>
+
+            <button pButton pRipple label="Quero ser um <b>DevFlower</b>" class="p-button-secondary"></button>
         </div>
     </div>
 
     <div class="col-12" >
-        <div class="card">
-            <h1 class="text-center">5 diferenciais para começar com o DevFlow Web agora mesmo</h1>
+        <h1 class="text-center">diferenciais para começar com o DevFlow Web agora mesmo</h1>
             <div class="grid">
-                <div class="col-12 md:col-6 lg:col-1 text-center">
+                <div class="col-12 md:col-6 lg:col-4 text-center">
+                    <div class="card">
+                        <i class="text-2xl pi pi-flag-fill"></i>
+                        <h3>Evolução desde a primeira sprint:</h3>
+                        <p>com a publicação da prova de conceito (POC) com a base do projeto logo na primeira Sprint, você poderá perceber os resultados e acompanhar a evolução do processo ao longo de cada sprints.</p>
+                    </div>
                 </div>
-                <div class="col-12 md:col-6 lg:col-2 text-center">
-                    <i class="text-2xl pi pi-flag-fill"></i>
-                    <h3>Evolução desde a primeira sprint:</h3>
-                    <p>com a publicação da prova de conceito (POC) com a base do projeto logo na primeira Sprint, você poderá perceber os resultados e acompanhar a evolução do processo ao longo de cada sprints.</p>
+                <div class="col-12 md:col-6 lg:col-4 text-center">
+                    <div class="card">
+                        <i class="text-2xl pi pi-clock"></i>
+                        <h3>Sprints personalizadas por desempenho:</h3>
+                        <p>as sprints são adaptadas ao seu ritmo de aprendizado e progresso individual, permitindo que você evolua no seu próprio ritmo.</p>
+                    </div>
                 </div>
-                <div class="col-12 md:col-6 lg:col-2 text-center">
-                    <i class="text-2xl pi pi-clock"></i>
-                    <h3>Sprints personalizadas por desempenho:</h3>
-                    <p>as sprints são adaptadas ao seu ritmo de aprendizado e progresso individual, permitindo que você evolua no seu próprio ritmo.</p>
+                <div class="col-12 md:col-6 lg:col-4 text-center">
+                    <div class="card">
+                        <i class="text-2xl pi pi-calendar"></i>
+                        <h3>Conclusão estimada em 6 meses a 1 ano:</h3>
+                        <p>o DevFlow Web é projetado para ajudá-lo a preparar-se para uma carreira de sucesso em um período razoável de tempo.</p>
+                    </div>
                 </div>
-                <div class="col-12 md:col-6 lg:col-2 text-center">
-                    <i class="text-2xl pi pi-calendar"></i>
-                    <h3>Conclusão estimada em 6 meses a 1 ano:</h3>
-                    <p>o DevFlow Web é projetado para ajudá-lo a preparar-se para uma carreira de sucesso em um período razoável de tempo.</p>
+                <div class="col-12 md:col-6 lg:col-4 text-center">
+                    <div class="card">
+                        <i class="text-2xl pi pi-tags"></i>
+                        <h3>Pílulas de conhecimento inclusas</h3>
+                        <p>como parte desta experiência, oferecemos pílulas de conhecimento para complementar sua jornada de aprendizado sem nenhum custo adicional.</p>
+                    </div>
                 </div>
-                <div class="col-12 md:col-6 lg:col-2 text-center">
-                    <i class="text-2xl pi pi-tags"></i>
-                    <h3>Pílulas de conhecimento inclusas</h3>
-                    <p>como parte desta experiência, oferecemos pílulas de conhecimento para complementar sua jornada de aprendizado sem nenhum custo adicional.</p>
+                <div class="col-12 md:col-6 lg:col-4 text-center">
+                    <div class="card">
+                        <i class="text-2xl pi pi-wrench"></i>
+                        <h3>Acesso a ferramentas corporativas:</h3>
+                        <p>ocê terá acesso a ferramentas essenciais como GitLab e PostgreSQL, utilizadas pelas empresas no desenvolvimento de aplicativos web, o que o preparará para trabalhar em um ambiente corporativo real.</p>
+                    </div>
                 </div>
-                <div class="col-12 md:col-6 lg:col-2 text-center">
-                    <i class="text-2xl pi pi-wrench"></i>
-                    <h3>Acesso a ferramentas corporativas:</h3>
-                    <p>ocê terá acesso a ferramentas essenciais como GitLab e PostgreSQL, utilizadas pelas empresas no desenvolvimento de aplicativos web, o que o preparará para trabalhar em um ambiente corporativo real.</p>
+                <div class="col-12 md:col-6 lg:col-4 text-center">
+                    <div class="card">
+                        <i class="text-2xl pi pi-wrench"></i>
+                        <h3>Acesso a ferramentas corporativas:</h3>
+                        <p>ocê terá acesso a ferramentas essenciais como GitLab e PostgreSQL, utilizadas pelas empresas no desenvolvimento de aplicativos web, o que o preparará para trabalhar em um ambiente corporativo real.</p>
+                    </div>
                 </div>
-                <div class="col-12 md:col-6 lg:col-1 text-center">
-                </div>
-            </div>
-            <div class="text-center">
-                <button pButton pRipple label="Quero me inscrever" class="p-button-secondary"></button>
-            </div>
         </div>
     </div>
 
